Update php requirements to 7.1
To more recent versions. At least 7.1 required for recent versions of phpunit
which is still well out of date.

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=7.1",
+        "ext-soap": "*"
     },
     "require-dev": {
         "jeremylivingston/core-proxies": "dev-master",
