Sorting makes patches generally easier

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
             "name": "Jeremy Livingston"
         }
     ],
+    "config": {
+        "sort-packages": true
+    },
     "require": {
         "php": ">=7.1",
         "ext-soap": "*"
