--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,6 @@ before_script:
   - composer update --prefer-source --dev
 
 script:
+  - ./vendor/bin/psalm
+  - ./vendor/bin/phpstan
   - ./vendor/bin/phpunit
